# concrete-kinds

./: .gitignore  .vimrc  CHANGELOG.md  DependentTypeRoles.hs  Free.hs  PolyKindedData.hs  Proto.hs  README.md  TODO.md  Temp.hs  concrete-kinds.cabal  old
docs/: LessonsLearned.md  LessonsLearned.yaml
rewrite/: concrete-kinds.cabal
rewrite/src/Kind/: Concrete.hs
src/: Test.hs
src/Control/Categorical/: Bifunctor.hs  Bifunctor_.hs  Functor.hs  Profunctor.hs
src/Control/Category/: Associative.hs  Braided.hs  Cartesian.hs  Choice.hs  Closed.hs  Cocartesian.hs  Coercible.hs  Distributive.hs  Exponential.hs  Final.hs  Initial.hs  Strong.hs
src/Data/: Dual.hs  Iso.hs  ReprEq.hs  Universal.hs
src/Data/Type/: Coercion.hs
src/Data/Type/Coercion/: Test.hs
src/Kind/: Concrete.hs
src/Kind/Concrete/: Class.hs  Compose.hs  Const.hs  Exp.hs  Extension.hs  Fix.hs  Free.hs  Identity.hs  Natural.hs  Product.hs  Subst.hs  Sum.hs  Unit.hs  Void.hs
