cabal-version:       2.4
name:                concrete-kinds
version:             0.1.0.0
synopsis:            Default categories and associated types for the kinds of
                     type constructors definable by data and newtype
homepage:            https://github.com/rampion/concrete-kinds
license:             LicenseRef-PublicDomain
author:              Noah Luck Easterly
maintainer:          noah.easterly@gmail.com
category:            Data
extra-source-files:  CHANGELOG.md, README.md

flag Development
  description: Enable all warnings and upgrade warnings to errors
  default: False
  manual: True

library
  exposed-modules:     Control.Category.Initial
                     , Control.Category.Final
                     , Control.Category.Strong
                     , Control.Category.Cartesian
                     , Control.Category.Choice
                     , Control.Category.Cocartesian
                     , Control.Category.Distributive
                     , Data.Iso
                     , Kind.Concrete.Product
                     , Kind.Concrete.Sum
  -- other-modules:
  -- other-extensions:
  build-depends:       base ^>=4.12.0.0
  hs-source-dirs:      src
  default-language:    Haskell2010
  if flag(development)
    ghc-options: -Wall -Wextra -Werror
